--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
   <meta name="twitter:site" content="@_julionovoa" />
   <meta name="twitter:title" content="Geospatial Data Analytics" />
   <meta name="twitter:description" content="personal website" />
-  <meta name="twitter:image" content="https://www.julionovoa.com/img/avatar.jpg" />
+  <meta name="twitter:image" content="/img/avatar.jpg" />
 
 
 
@@ -31,7 +31,7 @@
 
 
 <link rel="canonical" href="" />
-<link rel="alternative" href="https://www.julionovoa.com/index.xml" title="Julio Novoa" type="application/atom+xml" />
+<link rel="alternative" href="/index.xml" title="Julio Novoa" type="application/atom+xml" />
 
 
 <meta name="renderer" content="webkit" />
@@ -42,8 +42,8 @@
 
 <meta name="robots" content="index,follow" />
 <meta name="referrer" content="origin-when-cross-origin" />
-<meta name="google-site-verification" content="_moDmnnBNVLBN1rzNxyGUGdPHE20YgbmrtzLIbxaWFc" />
-<meta name="msvalidate.01" content="22596E34341DD1D17D6022C44647E587" />
+
+
 
 
 
@@ -56,18 +56,18 @@
 <meta name='msapplication-navbutton-color' content="#5fbf5e" />
 <meta name="msapplication-TileColor" content="#5fbf5e" />
 <meta name="msapplication-TileImage" content="/img/tile-image-windows.png" />
-<link rel="icon" href="https://www.julionovoa.com/img/favicon.ico" />
-<link rel="icon" type="image/png" sizes="16x16" href="https://www.julionovoa.com/img/favicon-16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="https://www.julionovoa.com/img/favicon-32x32.png" />
-<link rel="icon" sizes="192x192" href="https://www.julionovoa.com/img/touch-icon-android.png" />
-<link rel="apple-touch-icon" href="https://www.julionovoa.com/img/touch-icon-apple.png" />
-<link rel="mask-icon" href="https://www.julionovoa.com/img/safari-pinned-tab.svg" color="#5fbf5e" />
+<link rel="icon" href="/img/favicon.ico" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
+<link rel="icon" sizes="192x192" href="/img/touch-icon-android.png" />
+<link rel="apple-touch-icon" href="/img/touch-icon-apple.png" />
+<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5fbf5e" />
 
 
 
 <link rel="stylesheet" href="//cdn.bootcss.com/video.js/6.2.8/alt/video-js-cdn.min.css" />
 
-<link rel="stylesheet" href="https://www.julionovoa.com/css/bundle.css" />
+<link rel="stylesheet" href="/css/bundle.css" />
 
 
   
@@ -95,9 +95,9 @@
   <div class="not-found">
     <h1 class="error-emoji"></h1>
     <p class="error-text">/* 404 page not found. */</p>
-    <p class="error-link"><a href="https://www.julionovoa.com/">↑ Back Home ↑</a></p>
+    <p class="error-link"><a href="/">↑ Back Home ↑</a></p>
   </div>
-  <script src="https://www.julionovoa.com/js/bundle.js"></script>
+  <script src="/js/bundle.js"></script>
 
   </body>
 </html>
