--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Julio Novoa&#39;s Website">
 <meta name="keywords" content="blog, julionovoa, geospatial, gis, remote sensing">
 
-<base href="https://julionovoa.com">
+<base href="https://www.julionovoa.com">
 
 <title>Julio Novoa</title>
 
@@ -28,7 +28,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto+Slab:400,700|Roboto:300,300i,400,400i,500,500i,700,700i">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://julionovoa.com/css/main.css">
+<link rel="stylesheet" href="https://www.julionovoa.com/css/main.css">
 
 
 
